splitting the things that cmakes targets into a new file so it doesn't force users to have lapisgis targets in their projects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,4 @@ list(APPEND CMAKE_MODULE_PATH ${CMAKE_BINARY_DIR})
 
 include(LapisGis.cmake)
 include(LapisGisTest.cmake)
+include(LapisGisTargets.cmake)
